[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svn_cmd_tool"
version = "0.2.0"
description = "SVNコマンドでよく使う処理をまとめたPythonユーティリティツール"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "city-bridge"}
]
keywords = ["svn", "subversion", "command", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/city-bridge/svn_cmd_tool"
Repository = "https://github.com/city-bridge/svn_cmd_tool.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["svn_cmd_tool*"]
exclude = ["tests*"]